[tool.poetry]
name = "md_ast"
version = "0.0.1"
description = "Minimal Markdown Parser that creates an abstract syntax tree"
authors = ["Micha Vardy"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/michavardy/md_ast"
repository = "https://github.com/michavardy/md_ast"
documentation = "https://github.com/michavardy/md_ast"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = { version = "^21.5b1", extras = ["d"] }
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
